登陆，重置密码，注册页面UI

--- a/air-life-app/www/templates/air-register-user.html
+++ b/air-life-app/www/templates/air-register-user.html
@@ -1,1 +1,28 @@
 
+<ion-view class="app-air-register-user" view-title="注册">
+  <ion-content>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <i class="icon ion-search placeholder-icon"></i>
+        <input type="text" placeholder="请输入手机号">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="number" placeholder="请输入验证码">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="password" placeholder="请输入密码">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="number" placeholder="请输入邀请码">
+      </label>
+    </div>
+     <button class="button button-block button-light" ng-click="onClickRegisterButton()">注册</button>
+
+  </ion-content>
+</ion-view>
