--- a/air-life-app/www/templates/air-reset-password.html
+++ b/air-life-app/www/templates/air-reset-password.html
@@ -1,1 +1,24 @@
-
+<ion-view class="app-air-reset-password" view-title="重置密码">
+  <ion-content>
+    <form>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <i class="icon ion-search placeholder-icon"></i>
+        <input type="text" placeholder="请输入手机号">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="text" placeholder="请输入验证码">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="password" placeholder="请输入密码">
+      </label>
+    </div>
+    <button class="button button-block button-light" type="reset" ng-click="onClickResetButton()">重置</button>
+    <button class="button button-block button-light" ng-click="onClickCancelButton()">取消</button>
+    </form>
+  </ion-content>
+</ion-view>
