--- a/air-life-app/www/templates/air-login.html
+++ b/air-life-app/www/templates/air-login.html
@@ -1,6 +1,18 @@
-<ion-view hide-nav-bar="true">
+<ion-view hide-nav-bar="true" class="app-air-login">
   <ion-content>
-
-   <button class="button button-positive">登陆</button>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <i class="icon ion-search placeholder-icon"></i>
+        <input type="text" placeholder="请输入手机号">
+      </label>
+    </div>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="password" placeholder="请输入密码">
+      </label>
+    </div>
+      <button class="button button-block button-light" ng-click="onClickLoginButton()">登陆</button>
+      <button class="button button-block button-light" ng-click="onClickResetPasswordButton()">忘记密码</button>
+      <button class="button button-block button-light" ng-click="onClickRegisterUserButton()">注册</button>
   </ion-content>
 </ion-view>
