--- a/air-life-app/www/templates/air-reset-password.html
+++ b/air-life-app/www/templates/air-reset-password.html
@@ -1,6 +1,5 @@
 <ion-view class="app-air-reset-password" view-title="重置密码">
   <ion-content>
-    <form>
     <div class="list list-inset">
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
@@ -17,8 +16,7 @@
         <input type="password" placeholder="请输入密码">
       </label>
     </div>
-    <button class="button button-block button-light" type="reset" ng-click="onClickResetButton()">重置</button>
+    <button class="button button-block button-light"  ng-click="onClickResetButton()">重置</button>
     <button class="button button-block button-light" ng-click="onClickCancelButton()">取消</button>
-    </form>
   </ion-content>
 </ion-view>
