添加到诊室的按钮

--- a/air-life-app/www/templates/air-login.html
+++ b/air-life-app/www/templates/air-login.html
@@ -14,5 +14,6 @@
       <button class="button button-block button-light" ng-click="onClickLoginButton()">登陆</button>
       <button class="button button-block button-light" ng-click="onClickResetPasswordButton()">忘记密码</button>
       <button class="button button-block button-light" ng-click="onClickRegisterUserButton()">注册</button>
+      <button class="button button-block button-light" ng-click="onClickClinicButton()">跳到诊室详情</button>
   </ion-content>
 </ion-view>
