--- a/air-life-app/www/templates/air-clinic-page.html
+++ b/air-life-app/www/templates/air-clinic-page.html
@@ -1,41 +1,47 @@
 <ion-view view-title="诊室" class="app-air-clinic-page">
   <ion-content>
-    <ion-list>
+    <ion-list class="list">
       <ion-item class="departments">
-        <header>科室(点击科室选择医生进行门诊预约)</header>
+        <h2>科室 <span class="tips">(点击科室选择医生进行门诊预约)</span></h2>
       </ion-item>
       <!--添加item-text-wrap 可以使item类的内容换行-->
 
       <!--科室详情开始-->
       <!--科室1详情-->
       <ion-item class="department-details item-text-wrap">
-        <!--<i class="ion-chevron-right i"></i>-->
-        <h2>综合科<span>1位三甲医生</span></h2>
+        <i class="ion-chevron-right i"></i>
+        <h2 class="bold">综合科<span>1位三甲医生</span></h2>
         <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
       </ion-item>
 
       <!--科室2详情-->
       <ion-item class="department-details item-text-wrap">
-        <!--<i class="ion-chevron-right i"></i>-->
-        <h2>综合科<span>1位三甲医生</span></h2>
+        <i class="ion-chevron-right i"></i>
+        <h2 class="bold">综合科<span>1位三甲医生</span></h2>
         <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
       </ion-item>
 
       <!--科室3详情-->
       <ion-item class="department-details item-text-wrap">
         <!--<i class="ion-chevron-right i"></i>-->
-        <h2>综合科<span>1位三甲医生</span></h2>
+        <h2 class="bold">综合科<span>1位三甲医生</span></h2>
+        <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+      </ion-item>
+      <!--科室4详情-->
+      <ion-item class="department-details item-text-wrap">
+        <!--<i class="ion-chevron-right i"></i>-->
+        <h2 class="bold">综合科<span>1位三甲医生</span></h2>
         <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
       </ion-item>
       <!--科室详情结束-->
     </ion-list>
 
-    <ion-list>
-      <ion-item class="departments">
-        <header>诊所介绍</header>
+    <ion-list class="list">
+      <ion-item>
+        <h2>诊所介绍</h2>
       </ion-item>
-      <ion-item class="department-details item-text-wrap">
-        <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+      <ion-item class="item-text-wrap">
+        <p class="introduce">不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
       </ion-item>
     </ion-list>
   </ion-content>
