--- a/air-life-app/scss/_air-clinic-page.scss
+++ b/air-life-app/scss/_air-clinic-page.scss
@@ -1,6 +1,6 @@
 .app-air-clinic-page {
   background: #eee;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   line-height: 1.5;
   .departments {
     padding: 12px;
@@ -15,16 +15,17 @@
       font-size: 16px;
       .tips {
         color: #87cefa;
+        margin-left: 0;
       }
       span {
         margin-left: 16px;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: normal;
         color: #888;
       }
     }
     p {
-      font-size: 12px;
+      font-size: 14px;
       color: #888;
     }
     .introduce {
