更改登陆页面图标

--- a/air-life-app/scss/_air-login.scss
+++ b/air-life-app/scss/_air-login.scss
@@ -1,3 +1,7 @@
 .app-air-login{
-  background: blue;
+  background: url("../img/air-life.png") no-repeat 100%;
+  background-position: center 0;
+  .phone{
+    margin-top: 100px;
+  }
 }
