--- a/air-life-app/www/templates/air-clinic-doctors.html
+++ b/air-life-app/www/templates/air-clinic-doctors.html
@@ -1,11 +1,11 @@
-<ion-view view-title="爱尔诊所后宰门诊室">
+<ion-view view-title="爱尔诊所后宰门诊室" class="air-clinic-doctors">
   <ion-content>
     <ion-list>
       <ion-item class="item item-thumbnail-left item-text-wrap">
         <img ng-src="img/test.jpg" alt="">
         <h2>靳医生(工号005)</h2>
         <p class="padding">爱尔诊所后宰门诊室</p>
-        <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
+        <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗完成患者所完成患者所</p>
       </ion-item>
     </ion-list>
   </ion-content>
