air-clinic-Doctor路由设置

--- a/air-life-app/www/templates/air-clinic-page.html
+++ b/air-life-app/www/templates/air-clinic-page.html
@@ -8,7 +8,7 @@
 
       <!--科室详情开始-->
       <!--科室1详情-->
-      <ion-item class="department-details item-text-wrap" href="#/airClinicDoctors/1">
+      <ion-item class="department-details item-text-wrap" href="#/airClinicPage/1">
         <i class="ion-chevron-right i"></i>
         <h2 class="bold">综合科<span>1位三甲医生</span></h2>
         <p>不需转科，接诊医师根据据患者具体病情，一人完成患者所需要的补牙、镶牙、牙美容等全部口腔治疗</p>
