--- a/air-life-app/www/templates/air-clinic-doctors.html
+++ b/air-life-app/www/templates/air-clinic-doctors.html
@@ -1,7 +1,7 @@
 <ion-view view-title="爱尔诊所后宰门诊室" class="air-clinic-doctors">
   <ion-content>
     <ion-list>
-      <ion-item class="item item-thumbnail-left item-text-wrap">
+      <ion-item class="item item-thumbnail-left item-text-wrap" href="#/air-clinic-Doctor/:doctorId">
         <img ng-src="img/test.jpg" alt="">
         <h2>靳医生(工号005)</h2>
         <p class="padding">爱尔诊所后宰门诊室</p>
