实现doctor-details中的slide-tab功能

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -1,3 +1,4 @@
 @import "./_air-login";
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
+@import "./air-clinic-doctor-details.scss";
