--- a/air-life-app/www/css/style.css
+++ b/air-life-app/www/css/style.css
@@ -1,8 +1,11 @@
 .app-air-login {
-  background: url("../img/air-life.png") no-repeat 100%;
-  background-position: center 0; }
-  .app-air-login .phone {
-    margin-top: 100px; }
+  background: url("../img/air-life.png") no-repeat center 30px, url("../img/login-bottom.png") no-repeat center bottom; }
+  .app-air-login .phone-input {
+    margin-top: 185px; }
+  .app-air-login input {
+    margin-left: 10%;
+    margin-right: 10%; }
+
 
 .app-air-clinic-page {
   background: #eee;
