--- a/air-life-app/www/templates/air-login.html
+++ b/air-life-app/www/templates/air-login.html
@@ -1,13 +1,14 @@
 <ion-view hide-nav-bar="true" class="app-air-login">
   <ion-content>
-    <div class="list list-inset">
+    <div class="list list-inset phone-input">
       <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="text" placeholder="请输入手机号">
+        <i class="icon ion-android-person placeholder-icon"></i>
+        <input type="text"  placeholder="请输入手机号">
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-ios-keypad-outline placeholder-icon"></i>
         <input type="password" placeholder="请输入密码">
       </label>
     </div>
