修改-ui重置密码界面

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -1,4 +1,5 @@
 @import "./_air-login";
+@import "./_air-rest-password";
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
