--- a/air-life-app/www/templates/air-reset-password.html
+++ b/air-life-app/www/templates/air-reset-password.html
@@ -1,22 +1,27 @@
 <ion-view class="app-air-reset-password" view-title="重置密码">
   <ion-content>
+    <div class="home-page">
     <div class="list list-inset">
       <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
+        <i class="icon ion-android-person placeholder-icon"></i>
         <input type="text" placeholder="请输入手机号">
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-key placeholder-icon"></i>
         <input type="text" placeholder="请输入验证码">
+        <button class="button button-light button-clear button-dark button-small">获取验证码</button>
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-locked placeholder-icon"></i>
         <input type="password" placeholder="请输入密码">
       </label>
     </div>
-    <button class="button button-block button-light"  ng-click="onClickResetButton()">重置</button>
-    <button class="button button-block button-light" ng-click="onClickCancelButton()">取消</button>
+    <button class="button button-block  button-light"  ng-click="onClickResetButton()">重置</button>
+    <button class="button button-block  button-light" ng-click="onClickCancelButton()">取消</button>
+    </div>
   </ion-content>
 </ion-view>
