修改-ui注册界面

--- a/air-life-app/www/templates/air-register-user.html
+++ b/air-life-app/www/templates/air-register-user.html
@@ -1,28 +1,32 @@
-
 <ion-view class="app-air-register-user" view-title="注册">
   <ion-content>
+    <div class="home-page">
     <div class="list list-inset">
       <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
+        <i class="icon ion-android-person placeholder-icon"></i>
         <input type="text" placeholder="请输入手机号">
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-key placeholder-icon"></i>
         <input type="number" placeholder="请输入验证码">
+        <button class="button button-light button-clear button-dark button-small">获取验证码</button>
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-locked placeholder-icon"></i>
         <input type="password" placeholder="请输入密码">
       </label>
     </div>
     <div class="list list-inset">
       <label class="item item-input">
+        <i class="icon ion-archive placeholder-icon"></i>
         <input type="number" placeholder="请输入邀请码">
       </label>
     </div>
      <button class="button button-block button-light" ng-click="onClickRegisterButton()">注册</button>
-
+    </div>
   </ion-content>
 </ion-view>
