--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -1,5 +1,6 @@
 @import "./_air-login";
 @import "./_air-rest-password";
+@import "./_air-register-user";
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
