修改登陆，重置密码，注册的input间距为10px

--- a/air-life-app/scss/_air-login.scss
+++ b/air-life-app/scss/_air-login.scss
@@ -9,6 +9,9 @@
       color: #000;
       border-color: #dddddd;
     }
+    .list{
+      margin:10px ;
+    }
     .button{
       width: 94%;
       margin-left: 3%;
