--- a/air-life-app/scss/_air-register-user.scss
+++ b/air-life-app/scss/_air-register-user.scss
@@ -5,11 +5,18 @@
     width: 85%;
     margin: auto;
   }
+  .list{
+    margin:10px ;
+  }
   .button{
     color: #000;
     border-color: #dddddd;
     width: 94%;
     margin-left: 3%;
+  }
+  .button-small{
+    border: none;
+    color: #bbbbbb;
   }
   i{
     color: #0ba9f0;
