--- a/air-life-app/www/templates/air-register-user.html
+++ b/air-life-app/www/templates/air-register-user.html
@@ -26,6 +26,7 @@
         <input type="number" placeholder="请输入邀请码">
       </label>
     </div>
+        <ion-checkbox class="button button-clear button-small">同意爱尔生活用户协议</ion-checkbox>
      <button class="button button-block button-light" ng-click="onClickRegisterButton()">注册</button>
     </div>
   </ion-content>
