完成illness-description页面，样式编写初步完成

--- a/air-life-app/scss/style.scss
+++ b/air-life-app/scss/style.scss
@@ -2,3 +2,4 @@
 @import "./_air-clinic-page.scss";
 @import "./air-clinic-doctors.scss";
 @import "./air-clinic-doctor-details.scss";
+@import "_air-clinic-illness-description.scss";
