--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -1,1 +1,43 @@
+<ion-view view-title="病情描述" class="air-clinic-illness-description">
+  <ion-content>
+    <ion-item>
+      <p>病情描述-支付-平台确认-就诊</p>
+    </ion-item>
+    <div class="item">
+      <ion-list>
+        <ion-item>
+          <h2>孙医生(工号007) 2016-12-04 08:30</h2>
+        </ion-item>
+        <ion-item class="title">
+          病情描述
+        </ion-item>
+        <ion-item>
+          <textarea placeholder="请描述您的病情">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid doloremque doloribus eveniet ex excepturi expedita facilis hic omnis placeat quia repellat, velit vero? Aspernatur beatae molestias provident quas repellendus.</textarea>
+        </ion-item>
+        <ion-item class="title">
+          病情图片
+        </ion-item>
+        <ion-item class="item item-icon-right">
+          <p>上传图片</p>
+          <i class="icon ion-chevron-right"></i>
+        </ion-item>
+        <ion-item class="title">
+          <p>就诊人</p>
+        </ion-item>
+        <ion-item class="item item-icon-right">
+          <p>选择就诊人</p>
+          <i class="icon ion-chevron-right"></i>
+        </ion-item>
+      </ion-list>
+    </div>
+    <ion-item class="padding">
+      <button class="button">提交预约单</button>
+    </ion-item>
+    <div class="padding">
+      <ion-item class="item-text-wrap">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus labore nemo odio perspiciatis quibusdam quisquam quo quos rerum, suscipit tempora? Accusamus error eum minima nesciunt nihil qui quisquam saepe ullam?
+      </ion-item>
+    </div>
+  </ion-content>
+</ion-view>
 
