--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -17,14 +17,14 @@
         <ion-item class="title">
           病情图片
         </ion-item>
-        <ion-item class="item item-icon-right">
+        <ion-item class="item item-icon-right" ng-click="showCamera()">
           <p>上传图片</p>
           <i class="icon ion-chevron-right"></i>
         </ion-item>
         <ion-item class="title">
           <p>就诊人</p>
         </ion-item>
-        <ion-item class="item item-icon-right">
+        <ion-item class="item item-icon-right" ng-click="showList()">
           <p>选择就诊人</p>
           <i class="icon ion-chevron-right"></i>
         </ion-item>
