--- a/air-life-app/www/templates/air-clinic-illness-description.html
+++ b/air-life-app/www/templates/air-clinic-illness-description.html
@@ -1,8 +1,23 @@
 <ion-view view-title="病情描述" class="air-clinic-illness-description">
   <ion-content>
-    <ion-item>
-      <p>病情描述-支付-平台确认-就诊</p>
-    </ion-item>
+    <div class="flow">
+      <div class="flowItem">
+        <span class="fIcon"></span>
+        <span class="des">病情描述</span>
+      </div>
+      <div class="flowItem">
+        <span class="fIcon"></span>
+        <span class="des">病情描述</span>
+      </div>
+      <div class="flowItem">
+        <span class="fIcon"></span>
+        <span class="des">病情描述</span>
+      </div>
+      <div class="flowItem">
+        <span class="fIcon"></span>
+        <span class="des">病情描述</span>
+      </div>
+    </div>
     <div class="item">
       <ion-list>
         <ion-item>
